# dawgtools

./: .gitignore  README.md  bashrc  entrypoint.py  pyproject.toml  setup.py  update-bashrc.bash
.github/workflows/: docs.yml
docs/: Makefile  make.bat
docs/source/: api.rst  cli.md  clihelp_ext.py  conf.py  index.rst  usage.md
src/dawgtools/: __init__.py  __main__.py  db.py  main.py  test_db.py  utils.py
src/dawgtools/commands/: example.py  extract_batch.py  query.py  sql2csv.py
src/dawgtools/queries/: notes.sql  path_reports.sql
